// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overline should render styles for size "lg" 1`] = `
.c0 {
  display: block;
  font-family: 'Cabin',sans-serif;
  text-transform: uppercase;
  font-size: calc(0.875 * var(--lendi-ui-size));
  font-weight: 600;
  line-height: calc(0.875 * var(--lendi-ui-size));
  -webkit-letter-spacing: calc(calc(0.875 * var(--lendi-ui-size))/10);
  -moz-letter-spacing: calc(calc(0.875 * var(--lendi-ui-size))/10);
  -ms-letter-spacing: calc(calc(0.875 * var(--lendi-ui-size))/10);
  letter-spacing: calc(calc(0.875 * var(--lendi-ui-size))/10);
  color: #929292;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

<Component
  size="lg"
>
  <styled.span
    size="lg"
  >
    <span
      className="c0"
      size="lg"
    />
  </styled.span>
</Component>
`;

exports[`Overline should render styles for size "md" 1`] = `
.c0 {
  display: block;
  font-family: 'Cabin',sans-serif;
  text-transform: uppercase;
  font-size: calc(0.75 * var(--lendi-ui-size));
  font-weight: 600;
  line-height: calc(0.75 * var(--lendi-ui-size));
  -webkit-letter-spacing: calc(calc(0.75 * var(--lendi-ui-size))/10);
  -moz-letter-spacing: calc(calc(0.75 * var(--lendi-ui-size))/10);
  -ms-letter-spacing: calc(calc(0.75 * var(--lendi-ui-size))/10);
  letter-spacing: calc(calc(0.75 * var(--lendi-ui-size))/10);
  color: #929292;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

<Component
  size="md"
>
  <styled.span
    size="md"
  >
    <span
      className="c0"
      size="md"
    />
  </styled.span>
</Component>
`;

exports[`Overline should render styles for size "sm" 1`] = `
.c0 {
  display: block;
  font-family: 'Cabin',sans-serif;
  text-transform: uppercase;
  font-size: calc(0.625 * var(--lendi-ui-size));
  font-weight: 600;
  line-height: calc(0.625 * var(--lendi-ui-size));
  -webkit-letter-spacing: calc(calc(0.625 * var(--lendi-ui-size))/10);
  -moz-letter-spacing: calc(calc(0.625 * var(--lendi-ui-size))/10);
  -ms-letter-spacing: calc(calc(0.625 * var(--lendi-ui-size))/10);
  letter-spacing: calc(calc(0.625 * var(--lendi-ui-size))/10);
  color: #929292;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

<Component
  size="sm"
>
  <styled.span
    size="sm"
  >
    <span
      className="c0"
      size="sm"
    />
  </styled.span>
</Component>
`;

exports[`Overline should render styles for size "xl" 1`] = `
.c0 {
  display: block;
  font-family: 'Cabin',sans-serif;
  text-transform: uppercase;
  font-size: var(--lendi-ui-size);
  font-weight: 600;
  line-height: var(--lendi-ui-size);
  -webkit-letter-spacing: calc(var(--lendi-ui-size)/10);
  -moz-letter-spacing: calc(var(--lendi-ui-size)/10);
  -ms-letter-spacing: calc(var(--lendi-ui-size)/10);
  letter-spacing: calc(var(--lendi-ui-size)/10);
  color: #929292;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

<Component
  size="xl"
>
  <styled.span
    size="xl"
  >
    <span
      className="c0"
      size="xl"
    />
  </styled.span>
</Component>
`;
